Upgraded angular version from v19 to v20

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.2.14",
-    "@angular/common": "~19.2.14",
-    "@angular/compiler": "~19.2.14",
-    "@angular/core": "~19.2.14",
-    "@angular/forms": "~19.2.14",
-    "@angular/platform-browser": "~19.2.14",
-    "@angular/platform-browser-dynamic": "~19.2.14",
-    "@angular/router": "~19.2.14",
+    "@angular/animations": "~20.1.4",
+    "@angular/common": "~20.1.4",
+    "@angular/compiler": "~20.1.4",
+    "@angular/core": "~20.1.4",
+    "@angular/forms": "~20.1.4",
+    "@angular/platform-browser": "~20.1.4",
+    "@angular/platform-browser-dynamic": "~20.1.4",
+    "@angular/router": "~20.1.4",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.0",
     "rxjs": "~6.6.0",
@@ -25,17 +25,17 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.2.15",
-    "@angular/cli": "~19.2.15",
-    "@angular/compiler-cli": "~19.2.14",
+    "@angular/build": "^20.1.4",
+    "@angular/cli": "~20.1.4",
+    "@angular/compiler-cli": "~20.1.4",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "jasmine-core": "^4.6.1",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "typescript": "~5.8.3"
   }
 }
